syntax = "proto3";

package shopagolic.shipping.v1beta1;

option go_package = "github.com/demeero/shopagolic/services/proto/gen/go/shopagolic/shipping/v1beta1";

import "shopagolic/money/v1/money.proto";

service ShippingService {
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse) {}
  rpc ShipOrder(ShipOrderRequest) returns (ShipOrderResponse) {}
}

message Item {
  string product_id = 1;
  int32  quantity = 2;
}

message GetQuoteRequest {
  Address address = 1;
  repeated Item items = 2;
}

message GetQuoteResponse {money.v1.Money cost = 1;}

message ShipOrderRequest {
  Address address = 1;
  repeated Item items = 2;
}

message ShipOrderResponse {string tracking_id = 1;}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}
